[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "color-communication-system"
version = "1.0.0"
description = "Machine learning-powered color prediction and matching system"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.32.0",
    "numpy==1.24.4",
    "pandas==2.0.0",
    "scikit-learn==1.3.0",
    "joblib==1.3.0",
    "plotly==5.17.0",
    "scikit-image==0.21.0"
]

[project.urls]
Homepage = "https://github.com/DevKhubani123/color-communication-system"
Repository = "https://github.com/DevKhubani123/color-communication-system.git"
Issues = "https://github.com/DevKhubani123/color-communication-system/issues"